finished the 'once' kata

--- a/javascript/runner.html
+++ b/javascript/runner.html
@@ -2,11 +2,10 @@
 
 <html>
 <head>
-    <title>Kata Playground</title>
-    <script type="text/javascript" src="kata.js"></script>
+    <title>Kata Runner</title>
+    <script type="text/javascript" src="once.js"></script>
 </head>
 <body>
-    <p>The JS is in kata.js so you can easily copy paste it to codewars.com</p>
-
+    <p>This page runs a single JS file</p>
 </body>
 </html>
