created some jasmine tests for the vector class kata

--- a/javascript/runner.html
+++ b/javascript/runner.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>Kata Runner</title>
-    <script type="text/javascript" src="kata.js"></script>
+    <script type="text/javascript" src="vector-class.js"></script>
 </head>
 <body>
     <p>This page runs a single JS file</p>
