--- a/javascript/jasmine/SpecRunner.html
+++ b/javascript/jasmine/SpecRunner.html
@@ -12,10 +12,10 @@
   <script type="text/javascript" src="lib/jasmine-2.0.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="../guess-the-gifts/src.js"></script>
+  <script type="text/javascript" src="../base-conversion/src.js"></script>
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="../guess-the-gifts/tests.js"></script>
+  <script type="text/javascript" src="../base-conversion/tests.js"></script>
 
 </head>
 
